[package]
name = "aspect-reauth"
version = "0.7.0"
authors = ["Stairwell, Inc. <eng@stairwell.com>"]
edition = "2021"
homepage = "https://github.com/stairwell-inc/aspect-reauth"
license = "Apache-2.0"
description = "Sync fresh Aspect credentials with your dev VM"

exclude = [
    ".github/**",
    ".gitignore",
]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive", "env"] }
regex = "1.11.1"
tempfile = "3.16.0"

[dependencies.keyring]
version = "3.6.1"
features = ["apple-native", "linux-native-sync-persistent", "windows-native"]
