[package]
name = "aspect-reauth"
version = "0.8.1"
authors = ["Stairwell, Inc. <eng@stairwell.com>"]
edition = "2021"
repository = "https://github.com/stairwell-inc/aspect-reauth"
license = "Apache-2.0"
description = "Sync fresh Aspect credentials with your dev VM"

exclude = [
    ".github/**",
    ".gitignore",
]

[profile.fastbuild]
inherits = "dev"
debug = "line-tables-only"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.45", features = ["derive", "env"] }
regex = "1.11.1"
smol = "2.0.2"
tempfile = "3.16.0"

[dependencies.keyring]
version = "3.6.2"
features = ["apple-native", "linux-native-sync-persistent", "windows-native"]
